<resources>
    <string name="app_name">SpinnerApplication</string>
    <string name="toast">Toast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner">Spinner</string>
    <string name="enteryourcity">Enter your city</string>
    <string name="city">City</string>
    <string name="add">Add</string>
    <string name="aa">+</string>
    <string name="listveiwadapter">List veiw Adapter</string>
    <string name="congrats">Congratulation\nyou do it</string>
    <string name="list">List Veiw Array Adapter</string>
    <string name="name">Name</string>
    <string name="rollno">Roll no</string>
    <string name="Name">Enter Your Name</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="move_to_student_adapter_fragment">Move To Student Adapter</string>
    <string name="addinfo">Add information</string>
    <string name="enter">Enter your Details</string>
    <string name="course">Course</string>
    <string name="Update">Update</string>

    <string-array name="gender">
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="other">Other</item>
    </string-array>
</resources>