<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enteryourcity"
    android:textSize="50sp"
    android:textStyle="bold|italic"
    android:layout_gravity="center"
    android:background="#808EA8D5"
    android:id="@+id/txt1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/city"
        android:id="@+id/edt1"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="textAutoCorrect"
        android:layout_marginTop="50sp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/add"
        android:id="@+id/add"
        android:textStyle="bold|italic"
        android:layout_marginTop="40dp"/>
</LinearLayout>