<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Update"
        android:background="#C0C6E6"
        android:textSize="70sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold|italic"
            />
        <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/name"
            android:textAlignment="center"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rollno"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold|italic"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rollno"
            android:id="@+id/rollno"
            android:textAlignment="center"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold|italic"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course"
            android:id="@+id/course"
            android:textAlignment="center"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        android:id="@+id/update"
        android:layout_gravity="center"/>
</LinearLayout>