<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hori6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hori13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="95dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hori15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hori21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hori28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hori35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EEBEF6"
        android:text="@string/enter"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/hori13"
        app:layout_constraintEnd_toEndOf="@id/vert87"
        app:layout_constraintStart_toStartOf="@id/vert17"
        app:layout_constraintTop_toTopOf="@id/hori6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/hori21"
        app:layout_constraintEnd_toEndOf="@id/vert17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hori15" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/hori21"
        app:layout_constraintEnd_toEndOf="@id/vert87"
        app:layout_constraintStart_toStartOf="@id/vert17"
        app:layout_constraintTop_toTopOf="@id/hori15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollno"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/hori28"
        app:layout_constraintEnd_toEndOf="@id/vert17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hori21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/hori35"
        app:layout_constraintEnd_toEndOf="@id/vert17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hori28" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/rollno"
        android:id="@+id/RollNo"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/hori28"
        app:layout_constraintEnd_toEndOf="@id/vert87"
        app:layout_constraintStart_toStartOf="@id/vert17"
        app:layout_constraintTop_toTopOf="@id/hori21" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/course"
        android:inputType="text"
        android:id="@+id/Course"
        app:layout_constraintBottom_toBottomOf="@id/hori35"
        app:layout_constraintEnd_toEndOf="@id/vert87"
        app:layout_constraintStart_toStartOf="@id/vert17"
        app:layout_constraintTop_toTopOf="@id/hori28" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/hori35"
        app:layout_constraintEnd_toEndOf="@id/vert87"
        android:id="@+id/btnUpdate"
        android:text="@string/Update"/>

</androidx.constraintlayout.widget.ConstraintLayout>